# agent-mailer

./: .gitignore  AGENTS.md  README.md  README_CN.md  SETUP.md  SPEC.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.claude/commands/: forward.md
.claude/skills/zudui/: SKILL.md  start-team.sh.template
amp-team/: README.md  package.json
docs/: team-init.md  tutorial-cn.md  tutorial.md
packaging/: agent-mailer.service.example
src/agent_mailer/: auth.py  bootstrap.py  cli.py  codex_tick.py  config.py  db.py  forward_body.py  main.py  models.py  utils.py
src/agent_mailer/routes/: admin.py  agents.py  files.py  me_agents.py  memories.py  messages.py  superadmin.py  teams.py  users.py
src/agent_mailer/static/: index.html  splash.html  styles.css
src/agent_mailer_cli/: __init__.py  agent_md.py  amp.py  broker.py  claude_runner.py  codex_runner.py  config.py  consistency.py  discovery.py  infiniti_runner.py  main.py  memory.py  prompt.py  recovery.py  security.py  sessions.py  state.py  team_setup.py  watch.py  wizard.py
src/agent_mailer_cli/commands/: __init__.py  config_cmd.py  dead_letter_cmd.py  (+11 more)
tests/: test_admin.py  test_cli.py  test_codex_tick.py  test_db.py  test_me_agents.py  test_messages.py  test_setup.py  test_teams.py  test_users.py
tests/agent_mailer_cli/: test_agent_md.py  test_amp.py  test_broker.py  test_claude_runner.py  test_codex_runner.py  test_config.py  test_consistency.py  test_logs.py  test_memory.py  test_prompt.py  test_recovery.py  test_security.py  test_state.py  test_team_init.py  test_watch.py  test_wizard.py
(+10 files in other folders)
