[project]
name = "agent-mailer"
version = "0.1.0"
description = "Local multi-agent async collaboration network (broker + CLI)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "aiosqlite>=0.21",
    "markdown>=3.10.2",
    "bcrypt>=4.0",
    "pyjwt>=2.8",
    "python-dotenv>=1.0",
    "asyncpg>=0.29",
    "python-multipart>=0.0.9",
    "httpx>=0.28",
    "click>=8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.25",
    "httpx>=0.28",
]

[project.scripts]
# Broker / SaaS server-side admin CLI (rename per SPEC §5.3 / PM D1).
agent-mailer-server = "agent_mailer.cli:main"
# Per-workdir agent runtime (SPEC §5.1).
agent-mailer = "agent_mailer_cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_mailer", "src/agent_mailer_cli"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
